--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hardhat": "^2.8.4"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19"
   }
